--- a/singolo1.html
+++ b/singolo1.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Singolo app</title>
+
     <link rel="stylesheet" href="singolo1.css">
 </head>
 
@@ -13,14 +14,16 @@
     <div class="wrapper">
         <header class="header">
             <div class="container">
-                <a class="logo" href="#" title="SINGOLO">SINGOLO*</a>
                 <nav class="header__navigation">
+                    <a class="logo" href="#" title="SINGOLO">SINGOLO<sup class="logo__star">*</sup></a>
+
                     <ul class="navigation">
-                        <li class="navigation__item"><a class="navigation__link" href="#" title="HOME">HOME</a></li>
+                        <li class="navigation__item"><a class="navigation__link navigation__link--current" href="#" title="HOME">HOME</a></li>
                         <li class="navigation__item"><a class="navigation__link" href="#" title="SERVICES">SERVICES</a>
                         </li>
                         <li class="navigation__item"><a class="navigation__link" href="#"
-                                title="PORTFOLIO">PORTFOLIO</a></li>
+                                title="PORTFOLIO">PORTFOLIO</a>
+                        </li>
                         <li class="navigation__item"><a class="navigation__link" href="#" title="ABOUT">ABOUT</a></li>
                         <li class="navigation__item"><a class="navigation__link" href="#" title="CONTACT">CONTACT</a>
                         </li>
@@ -32,17 +35,23 @@
             <div class="slider">
                 <div class="container">
                     <ul class="slider__list">
-                        <li class="slider__slide">
-                            <img src="assets/images/phone-vertical.png" alt="iPhone Vertical">
-                            <img src="assets/images/phone-horizontal.png" alt="iPhone Horizontal">
+                        <li class="slider__slide slider__slide--visible">
+                            <img class="slider__image slider__image--left" src="assets/images/phone-vertical.png"
+                                alt="iPhone Vertical">
+                            <img class="slider__image slider__image--right" src="assets/images/phone-horizontal.png"
+                                alt="iPhone Horizontal">
                         </li>
                         <li class="slider__slide">
-                            <img src="assets/images/phone-vertical.png" alt="iPhone Vertical">
-                            <img src="assets/images/phone-horizontal.png" alt="iPhone Horizontal">
+                            <img class="slider__image slider__image--left" src="assets/images/phone-vertical.png"
+                                alt="iPhone Vertical">
+                            <img class="slider__image slider__image--right" src="assets/images/phone-horizontal.png"
+                                alt="iPhone Horizontal">
                         </li>
                         <li class="slider__slide">
-                            <img src="assets/images/phone-vertical.png" alt="iPhone Vertical">
-                            <img src="assets/images/phone-horizontal.png" alt="iPhone Horizontal">
+                            <img class="slider__image slider__image--left" src="assets/images/phone-vertical.png"
+                                alt="iPhone Vertical">
+                            <img class="slider__image slider__image--right" src="assets/images/phone-horizontal.png"
+                                alt="iPhone Horizontal">
                         </li>
                     </ul>
                     <div class="slider__controls">
@@ -53,88 +62,133 @@
             </div>
             <section class="services">
                 <div class="container">
-                    <h1 class="services__title">
-                        Our Services
-                    </h1>
-                    <p class="services__description">
-                        usce dapibus, tellus ac cursus commodo, tortor mauris condimentum. Duis mollis, non commodo
-                        luctus, nisi erat porttitor
-                        ligula, eget lacinia odio sem nec elit. Fusce dapibus, tellus ac cursus commodo, tortor mauris
-                        condimentum nibh.
-                    </p>
-                    <ul class="grid">
-                        <li class="grid__item">
-                            <div class="feature">
-                                <h3 class="feature__title">
-                                    Custom Design
-                                </h3>
-                                <p class="feature__description">
-                                    Curabitur vestibulum eget mauris quis laoreet. Phasellus in quam laoreet, viverra
-                                    lacus ut, ultrices velit
-                                </p>
-                            </div>
-                        </li>
-                        <li class="grid__item">
-                            <div class="feature">
-                                <h3 class="feature__title">
-                                    Inovative Ideas
-                                </h3>
-                                <p class="feature__description">
-                                    Quisque luctus, quam eget molestie commodo, lacus purus cursus purus, nec rutrum
-                                    tellus dolor id lorem.
-                                </p>
-                            </div>
-                        </li>
-                        <li class="grid__item">
-                            <div class="feature">
-                                <h3 class="feature__title">
-                                    Love Is The Answer
-                                </h3>
-                                <p class="feature__description">
-                                    Nulla sed nunc et tortor luctus faucibus. Morbi at aliquet turpis, et consequat
-                                    felis. Quisque condimentum.
-                                </p>
-                            </div>
-                        </li>
-                        <li class="grid__item">
-                            <div class="feature">
-                                <h3 class="feature__title">
-                                    Responsive Layout
-                                </h3>
-                                <p class="feature__description">
-                                    Curabitur vestibulum eget mauris quis laoreet. Phasellus in quam laoreet, viverra
-                                    lacus ut, ultrices velit
-                                </p>
-                            </div>
-                        </li>
-                        <li class="grid__item">
-                            <div class="feature">
-                                <h3 class="feature__title">
-                                    24 / 7 Support
-                                </h3>
-                                <p class="feature__description">
-                                    Vivamus vel quam lacinia, tincidunt dui non, vehicula nisi. Nulla a sem erat.
-                                    Pellentesque egestas venenatis lorem .
-                                </p>
-                            </div>
-                        </li>
-                        <li class="grid__item">
-                            <div class="feature">
-                                <h3 class="feature__title">
-                                    Feel Like A Star
-                                </h3>
-                                <p class="feature__description">
-                                    Quisque hendrerit purus dapibus, ornare nibh vitae, viverra nibh. Fusce vitae
-                                    aliquam tellus.
-                                </p>
-                            </div>
-                        </li>
-                    </ul>
+                    <div class="services__inner">
+                        <header class="services__header">
+                            <h1 class="services__title">
+                                Our Services
+                            </h1>
+                            <p class="services__description">
+                                Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum. Duis mollis, non
+                                commodo
+                                luctus, nisi erat porttitor
+                                ligula, eget lacinia odio sem nec elit. Fusce dapibus, tellus ac cursus commodo, tortor
+                                mauris
+                                condimentum nibh.
+                            </p>
+                        </header>
+
+                        <ul class="grid">
+                            <li class="grid__item">
+                                <div class="feature">
+
+                                    <div class="feature__icon">
+                                        <img src="/assets/images/pen.svg" alt="">
+                                    </div>
+                                    <div class="feature__text">
+                                        <h3 class="feature__title">
+                                            Custom Design
+                                        </h3>
+                                        <p class="feature__description">
+                                            Curabitur vestibulum eget mauris quis laoreet. Phasellus in quam laoreet,
+                                            viverra
+                                            lacus ut, ultrices velit
+                                        </p>
+                                    </div>
+                                </div>
+                            </li>
+                            <li class="grid__item">
+                                <div class="feature">
+                                    <div class="feature__icon">
+                                        <img src="/assets/images/bulb.svg" alt="">
+                                    </div>
+                                    <div class="feature__text">
+                                        <h3 class="feature__title">
+                                            Inovative Ideas
+                                        </h3>
+                                        <p class="feature__description">
+                                            Quisque luctus, quam eget molestie commodo, lacus purus cursus purus, nec
+                                            rutrum
+                                            tellus dolor id lorem.
+                                        </p>
+                                    </div>
+                                </div>
+                            </li>
+                            <li class="grid__item">
+                                <div class="feature">
+
+                                    <div class="feature__icon">
+                                        <img src="/assets/images/heart.svg" alt="">
+                                    </div>
+                                    <div class="feature__text">
+                                        <h3 class="feature__title">
+                                            Love Is The Answer
+                                        </h3>
+                                        <p class="feature__description">
+                                            Nulla sed nunc et tortor luctus faucibus. Morbi at aliquet turpis, et
+                                            consequat
+                                            felis. Quisque condimentum.
+                                        </p>
+                                    </div>
+                                </div>
+                            </li>
+                            <li class="grid__item">
+                                <div class="feature">
+                                    <div class="feature__icon">
+                                        <img src="/assets/images/phone.svg" alt="">
+                                    </div>
+                                    <div class="feature__text">
+                                        <h3 class="feature__title">
+                                            Responsive Layout
+                                        </h3>
+                                        <p class="feature__description">
+                                            Curabitur vestibulum eget mauris quis laoreet. Phasellus in quam laoreet,
+                                            viverra
+                                            lacus ut, ultrices velit
+                                        </p>
+                                    </div>
+                                </div>
+                            </li>
+                            <li class="grid__item">
+                                <div class="feature">
+                                    <div class="feature__icon">
+                                        <img src="/assets/images/chat.svg" alt="">
+                                    </div>
+                                    <div class="feature__text">
+                                        <h3 class="feature__title">
+                                            24 / 7 Support
+                                        </h3>
+                                        <p class="feature__description">
+                                            Vivamus vel quam lacinia, tincidunt dui non, vehicula nisi. Nulla a sem
+                                            erat.
+                                            Pellentesque egestas venenatis lorem .
+                                        </p>
+                                    </div>
+                                </div>
+                            </li>
+                            <li class="grid__item">
+                                <div class="feature">
+                                    <div class="feature__icon">
+                                        <img src="/assets/images/star.svg" alt="">
+                                    </div>
+                                    <div class="feature__text">
+                                        <h3 class="feature__title">
+                                            Feel Like A Star
+                                        </h3>
+                                        <p class="feature__description">
+                                            Quisque hendrerit purus dapibus, ornare nibh vitae, viverra nibh. Fusce
+                                            vitae
+                                            aliquam tellus.
+                                        </p>
+                                    </div>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
+
                 </div>
             </section>
         </main>
     </div>
-
 </body>
 
 </html>
