fix: fix assets source path

--- a/singolo1.html
+++ b/singolo1.html
@@ -82,7 +82,7 @@
                                 <div class="feature">
 
                                     <div class="feature__icon">
-                                        <img src="/assets/images/pen.svg" alt="">
+                                        <img src="assets/images/pen.svg" alt="">
                                     </div>
                                     <div class="feature__text">
                                         <h3 class="feature__title">
@@ -99,7 +99,7 @@
                             <li class="grid__item">
                                 <div class="feature">
                                     <div class="feature__icon">
-                                        <img src="/assets/images/bulb.svg" alt="">
+                                        <img src="assets/images/bulb.svg" alt="">
                                     </div>
                                     <div class="feature__text">
                                         <h3 class="feature__title">
@@ -117,7 +117,7 @@
                                 <div class="feature">
 
                                     <div class="feature__icon">
-                                        <img src="/assets/images/heart.svg" alt="">
+                                        <img src="assets/images/heart.svg" alt="">
                                     </div>
                                     <div class="feature__text">
                                         <h3 class="feature__title">
@@ -134,7 +134,7 @@
                             <li class="grid__item">
                                 <div class="feature">
                                     <div class="feature__icon">
-                                        <img src="/assets/images/phone.svg" alt="">
+                                        <img src="assets/images/phone.svg" alt="">
                                     </div>
                                     <div class="feature__text">
                                         <h3 class="feature__title">
@@ -151,7 +151,7 @@
                             <li class="grid__item">
                                 <div class="feature">
                                     <div class="feature__icon">
-                                        <img src="/assets/images/chat.svg" alt="">
+                                        <img src="assets/images/chat.svg" alt="">
                                     </div>
                                     <div class="feature__text">
                                         <h3 class="feature__title">
@@ -168,7 +168,7 @@
                             <li class="grid__item">
                                 <div class="feature">
                                     <div class="feature__icon">
-                                        <img src="/assets/images/star.svg" alt="">
+                                        <img src="assets/images/star.svg" alt="">
                                     </div>
                                     <div class="feature__text">
                                         <h3 class="feature__title">
