feat: about section

--- a/singolo2.html
+++ b/singolo2.html
@@ -212,30 +212,112 @@
                         </ul>
                     </nav>
                     <ul class="grid grid--4col grid--4row">
-                        <li class="grid-cell"><a href="#" class="portfolio__work"><img src="assets/images/Image-1.png"
+                        <li class="grid__cell"><a href="#" class="portfolio__work"><img src="assets/images/Image-1.png"
                                     alt="" class="portfolio__image"></a></li>
-                        <li class="grid-cell"><a href="#" class="portfolio__work"><img src="assets/images/Image-2.png"
+                        <li class="grid__cell"><a href="#" class="portfolio__work"><img src="assets/images/Image-2.png"
                                     alt="" class="portfolio__image"></a></li>
-                        <li class="grid-cell"><a href="#" class="portfolio__work"><img src="assets/images/Image-3.png"
+                        <li class="grid__cell"><a href="#" class="portfolio__work"><img src="assets/images/Image-3.png"
                                     alt="" class="portfolio__image"></a></li>
-                        <li class="grid-cell"><a href="#" class="portfolio__work"><img src="assets/images/Image-4.png"
+                        <li class="grid__cell"><a href="#" class="portfolio__work"><img src="assets/images/Image-4.png"
                                     alt="" class="portfolio__image"></a></li>
-                        <li class="grid-cell"><a href="#" class="portfolio__work"><img src="assets/images/Image-5.png"
+                        <li class="grid__cell"><a href="#" class="portfolio__work"><img src="assets/images/Image-5.png"
                                     alt="" class="portfolio__image"></a></li>
-                        <li class="grid-cell"><a href="#" class="portfolio__work"><img src="assets/images/Image-6.png"
+                        <li class="grid__cell"><a href="#" class="portfolio__work"><img src="assets/images/Image-6.png"
                                     alt="" class="portfolio__image"></a></li>
-                        <li class="grid-cell"><a href="#" class="portfolio__work"><img src="assets/images/Image-7.png"
+                        <li class="grid__cell"><a href="#" class="portfolio__work"><img src="assets/images/Image-7.png"
                                     alt="" class="portfolio__image"></a></li>
-                        <li class="grid-cell"><a href="#" class="portfolio__work"><img src="assets/images/Image-8.png"
+                        <li class="grid__cell"><a href="#" class="portfolio__work"><img src="assets/images/Image-8.png"
                                     alt="" class="portfolio__image"></a></li>
-                        <li class="grid-cell"><a href="#" class="portfolio__work"><img src="assets/images/Image-9.png"
+                        <li class="grid__cell"><a href="#" class="portfolio__work"><img src="assets/images/Image-9.png"
                                     alt="" class="portfolio__image"></a></li>
-                        <li class="grid-cell"><a href="#" class="portfolio__work"><img src="assets/images/Image-10.png"
+                        <li class="grid__cell"><a href="#" class="portfolio__work"><img src="assets/images/Image-10.png"
                                     alt="" class="portfolio__image"></a></li>
-                        <li class="grid-cell"><a href="#" class="portfolio__work"><img src="assets/images/Image-11.png"
+                        <li class="grid__cell"><a href="#" class="portfolio__work"><img src="assets/images/Image-11.png"
                                     alt="" class="portfolio__image"></a></li>
-                        <li class="grid-cell"><a href="#" class="portfolio__work"><img src="assets/images/Image-12.png"
+                        <li class="grid__cell"><a href="#" class="portfolio__work"><img src="assets/images/Image-12.png"
                                     alt="" class="portfolio__image"></a></li>
+                    </ul>
+                </div>
+            </section>
+            <section class="about">
+                <div class="container">
+                    <h2 class="about__title">
+                        About
+                    </h2>
+                    <p class="about__description">
+                        Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum. Duis mollis, non commodo
+                        luctus, nisi erat porttitor
+                        ligula, eget lacinia odio sem nec elit. Fusce dapibus, tellus ac cursus commodo, tortor mauris
+                        condimentum nibh.
+                    </p>
+
+                    <ul class="grid grid--3col">
+                        <li class="grid__cell">
+                            <div class="user">
+                                <figure class="user__info">
+                                    <img class="user__image" src="./assets/images/photo-1.jpg" alt="">
+                                    <figcaption class="user__data">
+                                        <p class="user__name">
+                                            Adam Jensen
+                                        </p>
+                                        <p class="user__bio">
+                                            Quisque luctus, quam eget molestie commodo, lacus purus cursus
+                                        </p>
+                                    </figcaption>
+                                </figure>
+                                <ul class="social">
+                                    <li class="social__item"><a href="#" class="social__link social__link--fb"></a></li>
+                                    <li class="social__item"><a href="#" class="social__link social__link--go"></a></li>
+                                    <li class="social__item"><a href="#" class="social__link social__link--tw"></a></li>
+                                    <li class="social__item"><a href="#" class="social__link social__link--lk"></a></li>
+                                </ul>
+                            </div>
+
+                        </li>
+                        <li class="grid__cell">
+                            <div class="user">
+                                <figure class="user__info">
+                                    <img class="user__image" src="./assets/images/photo-2.jpg" alt="">
+                                    <figcaption class="user__data">
+                                        <p class="user__name">
+                                        Desmond Miles
+                                        </p>
+                                        <p class="user__bio">
+                                        Curabitur vestibulum eget mauris quis laoreet. Phasellus in quam laoreet, viverra lacus ut, ultrices velit.
+                                        </p>
+                                    </figcaption>
+                                </figure>
+                                <ul class="social">
+                                    <li class="social__item"><a href="#" class="social__link social__link--fb"></a></li>
+                                    <li class="social__item"><a href="#" class="social__link social__link--go"></a></li>
+                                    <li class="social__item"><a href="#" class="social__link social__link--tw"></a></li>
+                                    <li class="social__item"><a href="#" class="social__link social__link--lk"></a></li>
+                                </ul>
+                            </div>
+                        
+                        </li>
+                        <li class="grid__cell">
+                            <div class="user">
+                                <figure class="user__info">
+                                    <img class="user__image" src="./assets/images/photo-3.jpg" alt="">
+                                    <figcaption class="user__data">
+                                        <p class="user__name">
+                                        Scolara Visari
+                                        </p>
+                                        <p class="user__bio">
+                                            Nulla sed nunc et tortor luctus faucibus. Morbi at aliquet turpis, et consequat felis. Quisque condimentum.
+                                        </p>
+                                    </figcaption>
+                                </figure>
+                                <ul class="social">
+                                    <li class="social__item"><a href="#" class="social__link social__link--fb"></a></li>
+                                    <li class="social__item"><a href="#" class="social__link social__link--go"></a></li>
+                                    <li class="social__item"><a href="#" class="social__link social__link--tw"></a></li>
+                                    <li class="social__item"><a href="#" class="social__link social__link--lk"></a></li>
+                                </ul>
+                            </div>
+                        
+                        </li>
                     </ul>
                 </div>
             </section>
