feat: made browsers fix

--- a/singolo2.html
+++ b/singolo2.html
@@ -280,10 +280,11 @@
                                     <img class="user__image" src="./assets/images/photo-2.jpg" alt="">
                                     <figcaption class="user__data">
                                         <p class="user__name">
-                                        Desmond Miles
+                                            Desmond Miles
                                         </p>
                                         <p class="user__bio">
-                                        Curabitur vestibulum eget mauris quis laoreet. Phasellus in quam laoreet, viverra lacus ut, ultrices velit.
+                                            Curabitur vestibulum eget mauris quis laoreet. Phasellus in quam laoreet,
+                                            viverra lacus ut, ultrices velit.
                                         </p>
                                     </figcaption>
                                 </figure>
@@ -294,7 +295,7 @@
                                     <li class="social__item"><a href="#" class="social__link social__link--lk"></a></li>
                                 </ul>
                             </div>
-                        
+
                         </li>
                         <li class="grid__cell">
                             <div class="user">
@@ -302,10 +303,11 @@
                                     <img class="user__image" src="./assets/images/photo-3.jpg" alt="">
                                     <figcaption class="user__data">
                                         <p class="user__name">
-                                        Scolara Visari
+                                            Scolara Visari
                                         </p>
                                         <p class="user__bio">
-                                            Nulla sed nunc et tortor luctus faucibus. Morbi at aliquet turpis, et consequat felis. Quisque condimentum.
+                                            Nulla sed nunc et tortor luctus faucibus. Morbi at aliquet turpis, et
+                                            consequat felis. Quisque condimentum.
                                         </p>
                                     </figcaption>
                                 </figure>
@@ -316,7 +318,7 @@
                                     <li class="social__item"><a href="#" class="social__link social__link--lk"></a></li>
                                 </ul>
                             </div>
-                        
+
                         </li>
                     </ul>
                 </div>
