--- a/singolo3.html
+++ b/singolo3.html
@@ -6,23 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Singolo app</title>
-    <style>
-html {
-  background-image: url("./node_modules/pixel-glass/singolo.jpg");
-  background-repeat: no-repeat;
-  background-position: 50% 0;
-}
-
-
-
-
-
-
-
-
-    </style>
-    <link rel="stylesheet" href="./node_modules/pixel-glass/styles.css">
-    <script src="./node_modules/pixel-glass/script.js"></script>
     <link rel="stylesheet" href="singolo3.css">
 </head>
 
@@ -53,21 +36,21 @@ html {
                 <div class="container">
                     <ul class="slider__list">
                         <li class="slider__slide slider__slide--visible">
-                            <img class="slider__image slider__image--left" src="assets/images/phone-vertical.png"
+                            <img class="slider__image slider__image--left" src="./assets/images/phone-vertical.png"
                                 alt="iPhone Vertical">
-                            <img class="slider__image slider__image--right" src="assets/images/phone-horizontal.png"
+                            <img class="slider__image slider__image--right" src="./assets/images/phone-horizontal.png"
                                 alt="iPhone Horizontal">
                         </li>
                         <li class="slider__slide">
-                            <img class="slider__image slider__image--left" src="assets/images/phone-vertical.png"
+                            <img class="slider__image slider__image--left" src="./assets/images/phone-vertical.png"
                                 alt="iPhone Vertical">
-                            <img class="slider__image slider__image--right" src="assets/images/phone-horizontal.png"
+                            <img class="slider__image slider__image--right" src="./assets/images/phone-horizontal.png"
                                 alt="iPhone Horizontal">
                         </li>
                         <li class="slider__slide">
-                            <img class="slider__image slider__image--left" src="assets/images/phone-vertical.png"
+                            <img class="slider__image slider__image--left" src="./assets/images/phone-vertical.png"
                                 alt="iPhone Vertical">
-                            <img class="slider__image slider__image--right" src="assets/images/phone-horizontal.png"
+                            <img class="slider__image slider__image--right" src="./assets/images/phone-horizontal.png"
                                 alt="iPhone Horizontal">
                         </li>
                     </ul>
@@ -99,7 +82,7 @@ html {
                             <div class="feature">
 
                                 <div class="feature__icon">
-                                    <img src="assets/images/pen.svg" alt="">
+                                    <img src="./assets/images/pen.svg" alt="">
                                 </div>
                                 <div class="feature__text">
                                     <h3 class="feature__title">
@@ -116,7 +99,7 @@ html {
                         <li class="grid__cell">
                             <div class="feature">
                                 <div class="feature__icon">
-                                    <img src="assets/images/bulb.svg" alt="">
+                                    <img src="./assets/images/bulb.svg" alt="">
                                 </div>
                                 <div class="feature__text">
                                     <h3 class="feature__title">
@@ -134,7 +117,7 @@ html {
                             <div class="feature">
 
                                 <div class="feature__icon">
-                                    <img src="assets/images/heart.svg" alt="">
+                                    <img src="./assets/images/heart.svg" alt="">
                                 </div>
                                 <div class="feature__text">
                                     <h3 class="feature__title">
@@ -151,7 +134,7 @@ html {
                         <li class="grid__cell">
                             <div class="feature">
                                 <div class="feature__icon">
-                                    <img src="assets/images/phone.svg" alt="">
+                                    <img src="./assets/images/phone.svg" alt="">
                                 </div>
                                 <div class="feature__text">
                                     <h3 class="feature__title">
@@ -168,7 +151,7 @@ html {
                         <li class="grid__cell">
                             <div class="feature">
                                 <div class="feature__icon">
-                                    <img src="assets/images/chat.svg" alt="">
+                                    <img src="./assets/images/chat.svg" alt="">
                                 </div>
                                 <div class="feature__text">
                                     <h3 class="feature__title">
@@ -185,7 +168,7 @@ html {
                         <li class="grid__cell">
                             <div class="feature">
                                 <div class="feature__icon">
-                                    <img src="assets/images/star.svg" alt="">
+                                    <img src="./assets/images/star.svg" alt="">
                                 </div>
                                 <div class="feature__text">
                                     <h3 class="feature__title">
@@ -227,29 +210,29 @@ html {
                         </ul>
                     </nav>
                     <ul class="grid grid--4col grid--4row">
-                        <li class="grid__cell"><a href="#" class="portfolio__work"><img src="assets/images/Image-1.png"
+                        <li class="grid__cell"><a href="#" class="portfolio__work"><img src="./assets/images/Image-1.png"
                                     alt="" class="portfolio__image"></a></li>
-                        <li class="grid__cell"><a href="#" class="portfolio__work"><img src="assets/images/Image-2.png"
+                        <li class="grid__cell"><a href="#" class="portfolio__work"><img src="./assets/images/Image-2.png"
                                     alt="" class="portfolio__image"></a></li>
-                        <li class="grid__cell"><a href="#" class="portfolio__work"><img src="assets/images/Image-3.png"
+                        <li class="grid__cell"><a href="#" class="portfolio__work"><img src="./assets/images/Image-3.png"
                                     alt="" class="portfolio__image"></a></li>
-                        <li class="grid__cell"><a href="#" class="portfolio__work"><img src="assets/images/Image-4.png"
+                        <li class="grid__cell"><a href="#" class="portfolio__work"><img src="./assets/images/Image-4.png"
                                     alt="" class="portfolio__image"></a></li>
-                        <li class="grid__cell"><a href="#" class="portfolio__work"><img src="assets/images/Image-5.png"
+                        <li class="grid__cell"><a href="#" class="portfolio__work"><img src="./assets/images/Image-5.png"
                                     alt="" class="portfolio__image"></a></li>
-                        <li class="grid__cell"><a href="#" class="portfolio__work"><img src="assets/images/Image-6.png"
+                        <li class="grid__cell"><a href="#" class="portfolio__work"><img src="./assets/images/Image-6.png"
                                     alt="" class="portfolio__image"></a></li>
-                        <li class="grid__cell"><a href="#" class="portfolio__work"><img src="assets/images/Image-7.png"
+                        <li class="grid__cell"><a href="#" class="portfolio__work"><img src="./assets/images/Image-7.png"
                                     alt="" class="portfolio__image"></a></li>
-                        <li class="grid__cell"><a href="#" class="portfolio__work"><img src="assets/images/Image-8.png"
+                        <li class="grid__cell"><a href="#" class="portfolio__work"><img src="./assets/images/Image-8.png"
                                     alt="" class="portfolio__image"></a></li>
-                        <li class="grid__cell"><a href="#" class="portfolio__work"><img src="assets/images/Image-9.png"
+                        <li class="grid__cell"><a href="#" class="portfolio__work"><img src="./assets/images/Image-9.png"
                                     alt="" class="portfolio__image"></a></li>
-                        <li class="grid__cell"><a href="#" class="portfolio__work"><img src="assets/images/Image-10.png"
+                        <li class="grid__cell"><a href="#" class="portfolio__work"><img src="./assets/images/Image-10.png"
                                     alt="" class="portfolio__image"></a></li>
-                        <li class="grid__cell"><a href="#" class="portfolio__work"><img src="assets/images/Image-11.png"
+                        <li class="grid__cell"><a href="#" class="portfolio__work"><img src="./assets/images/Image-11.png"
                                     alt="" class="portfolio__image"></a></li>
-                        <li class="grid__cell"><a href="#" class="portfolio__work"><img src="assets/images/Image-12.png"
+                        <li class="grid__cell"><a href="#" class="portfolio__work"><img src="./assets/images/Image-12.png"
                                     alt="" class="portfolio__image"></a></li>
                     </ul>
                 </div>
