--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Singolo app</title>
-    <link rel="stylesheet" href="singolo3.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -210,30 +210,30 @@
                         </ul>
                     </nav>
                     <ul class="grid grid--4col grid--4row">
-                        <li class="grid__cell"><a href="#" class="portfolio__work"><img src="./assets/images/Image-1.png"
-                                    alt="" class="portfolio__image"></a></li>
-                        <li class="grid__cell"><a href="#" class="portfolio__work"><img src="./assets/images/Image-2.png"
-                                    alt="" class="portfolio__image"></a></li>
-                        <li class="grid__cell"><a href="#" class="portfolio__work"><img src="./assets/images/Image-3.png"
-                                    alt="" class="portfolio__image"></a></li>
-                        <li class="grid__cell"><a href="#" class="portfolio__work"><img src="./assets/images/Image-4.png"
-                                    alt="" class="portfolio__image"></a></li>
-                        <li class="grid__cell"><a href="#" class="portfolio__work"><img src="./assets/images/Image-5.png"
-                                    alt="" class="portfolio__image"></a></li>
-                        <li class="grid__cell"><a href="#" class="portfolio__work"><img src="./assets/images/Image-6.png"
-                                    alt="" class="portfolio__image"></a></li>
-                        <li class="grid__cell"><a href="#" class="portfolio__work"><img src="./assets/images/Image-7.png"
-                                    alt="" class="portfolio__image"></a></li>
-                        <li class="grid__cell"><a href="#" class="portfolio__work"><img src="./assets/images/Image-8.png"
-                                    alt="" class="portfolio__image"></a></li>
-                        <li class="grid__cell"><a href="#" class="portfolio__work"><img src="./assets/images/Image-9.png"
-                                    alt="" class="portfolio__image"></a></li>
-                        <li class="grid__cell"><a href="#" class="portfolio__work"><img src="./assets/images/Image-10.png"
-                                    alt="" class="portfolio__image"></a></li>
-                        <li class="grid__cell"><a href="#" class="portfolio__work"><img src="./assets/images/Image-11.png"
-                                    alt="" class="portfolio__image"></a></li>
-                        <li class="grid__cell"><a href="#" class="portfolio__work"><img src="./assets/images/Image-12.png"
-                                    alt="" class="portfolio__image"></a></li>
+                        <li class="grid__cell"><a href="#" class="portfolio__work"><img
+                                    src="./assets/images/Image-1.png" alt="" class="portfolio__image"></a></li>
+                        <li class="grid__cell"><a href="#" class="portfolio__work"><img
+                                    src="./assets/images/Image-2.png" alt="" class="portfolio__image"></a></li>
+                        <li class="grid__cell"><a href="#" class="portfolio__work"><img
+                                    src="./assets/images/Image-3.png" alt="" class="portfolio__image"></a></li>
+                        <li class="grid__cell"><a href="#" class="portfolio__work"><img
+                                    src="./assets/images/Image-4.png" alt="" class="portfolio__image"></a></li>
+                        <li class="grid__cell"><a href="#" class="portfolio__work"><img
+                                    src="./assets/images/Image-5.png" alt="" class="portfolio__image"></a></li>
+                        <li class="grid__cell"><a href="#" class="portfolio__work"><img
+                                    src="./assets/images/Image-6.png" alt="" class="portfolio__image"></a></li>
+                        <li class="grid__cell"><a href="#" class="portfolio__work"><img
+                                    src="./assets/images/Image-7.png" alt="" class="portfolio__image"></a></li>
+                        <li class="grid__cell"><a href="#" class="portfolio__work"><img
+                                    src="./assets/images/Image-8.png" alt="" class="portfolio__image"></a></li>
+                        <li class="grid__cell"><a href="#" class="portfolio__work"><img
+                                    src="./assets/images/Image-9.png" alt="" class="portfolio__image"></a></li>
+                        <li class="grid__cell"><a href="#" class="portfolio__work"><img
+                                    src="./assets/images/Image-10.png" alt="" class="portfolio__image"></a></li>
+                        <li class="grid__cell"><a href="#" class="portfolio__work"><img
+                                    src="./assets/images/Image-11.png" alt="" class="portfolio__image"></a></li>
+                        <li class="grid__cell"><a href="#" class="portfolio__work"><img
+                                    src="./assets/images/Image-12.png" alt="" class="portfolio__image"></a></li>
                     </ul>
                 </div>
             </section>
@@ -259,7 +259,8 @@
                                             Adam Jensen
                                         </p>
                                         <p class="user__bio">
-                                            Quisque luctus, quam eget molestie commodo, lacus purus cursus purus, nec rutrum tellus dolor id lorem.
+                                            Quisque luctus, quam eget molestie commodo, lacus purus cursus purus, nec
+                                            rutrum tellus dolor id lorem.
                                         </p>
                                     </figcaption>
                                 </figure>
@@ -352,15 +353,17 @@
                                         <label for="name-field" class="form__label visually-hidden">
                                             Name
                                         </label>
-                                        <input id="name-field" type="text" class="form__field" pattern="[a-z]{1,15}" required
-                                            placeholder="Name (Required)" title="Username should only contain lowercase letters. e.g. john">
+                                        <input id="name-field" type="text" class="form__field" pattern="[a-z]{1,15}"
+                                            required placeholder="Name (Required)"
+                                            title="Username should only contain lowercase letters. e.g. john">
                                     </li>
                                     <li class="form__item">
                                         <label for="email-field" class="form__label visually-hidden">
                                             Email
                                         </label>
                                         <input id="email-field" type="email" class="form__field" required
-                                            placeholder="Email (Required)" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$" >
+                                            placeholder="Email (Required)"
+                                            pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$">
                                     </li>
                                     <li class="form__item">
                                         <label for="subject-field" class="form__label visually-hidden">
