feat: add submit button

--- a/index.html
+++ b/index.html
@@ -378,8 +378,8 @@
                                         <textarea id="textarea-field" class="form__field form__field--textarea"
                                             placeholder="Describe your project in detail..."></textarea>
                                     </li>
-                                    <li class="form__item visually-hidden">
-                                        <button type="submit">Send request</button>
+                                    <li class="form__item form__item--absolute">
+                                        <button class="form__submit-btn" type="submit">Send request</button>
                                     </li>
                                 </ul>
                             </form>
