feat: create header & portfolio functions

--- a/index.html
+++ b/index.html
@@ -11,21 +11,21 @@
 
 <body>
     <div class="wrapper">
-        <header class="header">
+        <header class="header" id="header">
             <div class="container">
                 <nav class="header__navigation">
                     <a class="logo" href="#" title="SINGOLO">SINGOLO<sup class="logo__star">*</sup></a>
 
                     <ul class="navigation">
-                        <li class="navigation__item"><a class="navigation__link navigation__link--current" href="#"
+                        <li class="navigation__item"><a class="navigation__link navigation__link--current" href="#header"
                                 title="HOME">HOME</a></li>
-                        <li class="navigation__item"><a class="navigation__link" href="#" title="SERVICES">SERVICES</a>
+                        <li class="navigation__item"><a class="navigation__link" href="#services" title="SERVICES">SERVICES</a>
                         </li>
-                        <li class="navigation__item"><a class="navigation__link" href="#"
+                        <li class="navigation__item"><a class="navigation__link" href="#portfolio"
                                 title="PORTFOLIO">PORTFOLIO</a>
                         </li>
-                        <li class="navigation__item"><a class="navigation__link" href="#" title="ABOUT">ABOUT</a></li>
-                        <li class="navigation__item"><a class="navigation__link" href="#" title="CONTACT">CONTACT</a>
+                        <li class="navigation__item"><a class="navigation__link" href="#about" title="ABOUT">ABOUT</a></li>
+                        <li class="navigation__item"><a class="navigation__link" href="#contact" title="CONTACT">CONTACT</a>
                         </li>
                     </ul>
                 </nav>
@@ -60,7 +60,7 @@
                     </div>
                 </div>
             </div>
-            <section class="services">
+            <section class="services" id="services">
                 <div class="container">
 
                     <header class="services__header">
@@ -185,7 +185,7 @@
                     </ul>
                 </div>
             </section>
-            <section class="portfolio">
+            <section class="portfolio" id="portfolio">
                 <div class="container">
                     <h2 class="portfolio__title">
                         Portfolio
@@ -237,7 +237,7 @@
                     </ul>
                 </div>
             </section>
-            <section class="about">
+            <section class="about" id="about">
                 <div class="container">
                     <h2 class="about__title">
                         About us
@@ -334,7 +334,7 @@
                     </ul>
                 </div>
             </section>
-            <section class="contact">
+            <section class="contact" id="contact">
                 <div class="container">
                     <h2 class="contact__title">
                         Get a Quote
@@ -437,7 +437,7 @@
             </div>
         </footer>
     </div>
-    <script src="./dist/script.js"></script>
+    <script src="./script.js"></script>
 </body>
 
 </html>
