--- a/index.html
+++ b/index.html
@@ -17,15 +17,18 @@
                     <a class="logo" href="#" title="SINGOLO">SINGOLO<sup class="logo__star">*</sup></a>
 
                     <ul class="navigation">
-                        <li class="navigation__item"><a class="navigation__link navigation__link--current" href="#header"
-                                title="HOME">HOME</a></li>
-                        <li class="navigation__item"><a class="navigation__link" href="#services" title="SERVICES">SERVICES</a>
+                        <li class="navigation__item"><a class="navigation__link navigation__link--current"
+                                href="#header" title="HOME">HOME</a></li>
+                        <li class="navigation__item"><a class="navigation__link" href="#services"
+                                title="SERVICES">SERVICES</a>
                         </li>
                         <li class="navigation__item"><a class="navigation__link" href="#portfolio"
                                 title="PORTFOLIO">PORTFOLIO</a>
                         </li>
-                        <li class="navigation__item"><a class="navigation__link" href="#about" title="ABOUT">ABOUT</a></li>
-                        <li class="navigation__item"><a class="navigation__link" href="#contact" title="CONTACT">CONTACT</a>
+                        <li class="navigation__item"><a class="navigation__link" href="#about" title="ABOUT">ABOUT</a>
+                        </li>
+                        <li class="navigation__item"><a class="navigation__link" href="#contact"
+                                title="CONTACT">CONTACT</a>
                         </li>
                     </ul>
                 </nav>
@@ -33,31 +36,39 @@
         </header>
         <main class="main">
             <div class="slider">
-                <div class="container">
-                    <ul class="slider__list">
-                        <li class="slider__slide slider__slide--visible">
-                            <img class="slider__image slider__image--left" src="./assets/images/phone-vertical.png"
+                <ul class="slider__list">
+                    <li class="slider__slide slider__slide--red slider__slide--visible">
+                        <div class="slider__inner container">
+                            <div class="slider__zone slider__zone--vertical">
+                                <img class="slider__image slider__image--left" src="./assets/images/phone-vertical.png"
+                                    alt="iPhone Vertical">
+                                <button class="slider__phone-button slider__phone-button--vertical">
+                                    Turn on/off
+                                </button>
+                            </div>
+                            <div class="slider__zone slider__zone--horizontal">
+                                <img class="slider__image slider__image--right"
+                                    src="./assets/images/phone-horizontal.png" alt="iPhone Horizontal">
+                                <button class="slider__phone-button slider__phone-button--hotizontal">
+                                    Turn on/off
+                                </button>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="slider__slide slider__slide--blue">
+                        <div class="slider__inner slider__inner--center container">
+                            <img class="slider__image slider__image--small-left"
+                                src="./assets/images/phone-vertical-small.png" alt="iPhone Vertical">
+                            <img class="slider__image slider__image--center" src="./assets/images/phone-vertical-2.png"
                                 alt="iPhone Vertical">
-                            <img class="slider__image slider__image--right" src="./assets/images/phone-horizontal.png"
-                                alt="iPhone Horizontal">
-                        </li>
-                        <li class="slider__slide">
-                            <img class="slider__image slider__image--left" src="./assets/images/phone-vertical.png"
-                                alt="iPhone Vertical">
-                            <img class="slider__image slider__image--right" src="./assets/images/phone-horizontal.png"
-                                alt="iPhone Horizontal">
-                        </li>
-                        <li class="slider__slide">
-                            <img class="slider__image slider__image--left" src="./assets/images/phone-vertical.png"
-                                alt="iPhone Vertical">
-                            <img class="slider__image slider__image--right" src="./assets/images/phone-horizontal.png"
-                                alt="iPhone Horizontal">
-                        </li>
-                    </ul>
-                    <div class="slider__controls">
-                        <button class="slider__btn slider__btn--prev">Prev</button>
-                        <button class="slider__btn slider__btn--next">Next</button>
-                    </div>
+                            <img class="slider__image slider__image--small-right"
+                                src="./assets/images/phone-vertical-small.png" alt="iPhone Vertical">
+                        </div>
+                    </li>
+                </ul>
+                <div class="slider__controls container">
+                    <button class="slider__btn slider__btn--prev" data-direction="prev">Prev</button>
+                    <button class="slider__btn slider__btn--next" data-direction="next">Next</button>
                 </div>
             </div>
             <section class="services" id="services">
