--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
                     <nav class="portfolio__navigation">
                         <ul class="portfolio__list">
                             <li class="portfolio__item">
-                                <a href="" class="portfolio__link portfolio__link--active">All</a>
+                                <a href="" class="portfolio__link">All</a>
                             </li>
                             <li class="portfolio__item">
                                 <a href="" class="portfolio__link">Web Design</a>
